<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".creditos">

    <TextView
        android:id="@+id/txtcreditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textColor="#00FFE7"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtpixabay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/pixabay_pixabay_es_una_p_gina_que_te_facilita_la_obtenci_n_de_imagenes_de_descarga_gratuita_para_diferentes_tipos_de_trabajos"
        android:textColor="#00FFE7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="416dp"
        android:layout_height="309dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/flaticon_flaticon_es_una_p_gina_encargada_de_entregar_todo_tipo_de_iconos_personalizables_en_base_a_las_necesidades_del_usuario_y_para_mejor_es_gratuita"
        android:textColor="#00FFE7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpixabay"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/btnsalircreditos"
        android:layout_width="361dp"
        android:layout_height="69dp"
        android:backgroundTint="#00FFE7"
        android:fontFamily="sans-serif-black"
        android:onClick="salircreditos"
        android:text="@string/volver"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.703" />
</androidx.constraintlayout.widget.ConstraintLayout>